--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --secondary-color: #fff;
   --accent-color: #c0392b;
   --text-color: #000;
-  --highlight-bg: #f4cccc;
+  --highlight-bg: #ecb464;
   --highlight-fg: #000;
 }
 
